--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,64 +1,53 @@
-.postsContainer {
-  margin-top: 1.375rem;
+.posts {
+  margin-top:2em;
 
   > a {
-    display: block;
+    display:block;
   }
 
   a + a {
     margin-top: 3rem;
   }
+
+  button {
+    border:none;
+    background:transparent;
+    font-weight:600;
+    font-size: 1.125rem;
+    color:var(--highlight);
+    margin-top:4rem;
+  }
+
 }
 
 .post {
-  width: 100%;
 
   strong {
-    font-size: 1.75rem;
-    transition: color .2s;
-    color: var(--heading);
+    font-size:1.75rem;
+    font-weight: bold;
+    color:var(--heading);
   }
 
-  p {
-    margin-top: .5rem;
-    font-size: 1.125rem;
+  p{
+    margin-top:0.5rem;
+    font-size:1.125rem;
   }
 
   ul {
+    list-style: none;
+    margin-top:1.5rem;
     display: flex;
-    align-items: center;
 
-    margin-top: 1.5rem;
+    & li {
+      font-size:0.875rem;
 
-    li {
-      font-size: .875rem;
-      color: var(--info);
-      display: flex;
-      align-items: center;
-    }
+      & svg {
+        margin-right: 0.5rem;
+      }
 
-    li + li {
-      margin-left: 1.5rem;
-    }
-
-    svg {
-      font-size: 1.25rem;
-      margin-right: .5rem;
+      & + li {
+        margin-left: 1.625rem;
+      }
     }
   }
-
-  &:hover {
-    strong {
-      color: var(--highlight);
-    }
-  }
-}
-
-.loadMore {
-  border: none;
-  background: transparent;
-
-  color: var(--highlight);
-  font-weight: 600;
-  margin-top: 4rem;
 }
