--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,17 +1,17 @@
 .banner {
-  width: 100%;
-  object-fit: cover;
+  width:100%;
   height: 25rem;
+  object-fit: cover;
 }
 
 .post {
-  h2 {
+  h2{
     font-size:2.25rem;
     color:var(--heading);
     margin: 3rem 0;
   }
 
-  p, span, a, ul {
+  p, span, a, ul{
     font-size:1.125rem;
     line-height: 1.8;
     margin: 1.8rem 0;
@@ -21,7 +21,7 @@
     color:var(--highlight)
   }
 
-  strong {
+  strong{
     font-weight: 700;
     color:var(--body)
   }
@@ -35,36 +35,69 @@
   }
 }
 
-.postHeader {
+.postTop{
   margin-bottom: 4rem;
-
   > h1 {
-    font-size: 3rem;
-    margin-bottom: 1.5rem;
+    font-size:3rem;
+    color:var(--heading);
+    margin-bottom:1.5rem;
   }
 
   > ul {
-    padding: 0;
-    margin: 0;
-    color: var(--info);
-
+    padding:0;
+    margin:0;
+    list-style: none;
     display: flex;
-    align-items: center;
 
-    svg {
-      font-size: 1.25rem;
-      margin-right: .5rem;
-    }
+    & li {
+      margin:0;
+      font-size:0.875rem;
 
-    li {
-      display: flex;
-      align-items: center;
-
-      font-size: .875rem;
+      & svg {
+        margin-right: 0.5rem;
+      }
 
       & + li {
-        margin-left: 1.5rem;
+        margin-left: 1.625rem;
       }
     }
   }
+
+  > span {
+    margin-top: 1rem;
+    display:block;
+    font-style: italic;
+    font-size: 0.875rem;
+    color:var(--info)
+  }
+
 }
+
+.navigation {
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  border-top: 1px solid var(--border);
+
+  h3{
+    font-size:1.125rem;
+    font-weight: 400;
+    color:var(--heading);
+    margin-bottom:0.5rem;
+  }
+
+  a {
+    color:var(--highlight);
+    font-weight:600;
+  }
+
+  div {
+    padding-top: 3rem;
+  }
+
+  div + div{
+    text-align: right;
+
+  }
+}
+
